--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
     </div>
     <footer>
       <div class="container">
-        <a href="http://jashilko.ru">Created by Jashilko</a>  {% include svg-icons.html %}
+        2016-2017 Created by jashilko
         {% include yandex.html %}
       </div>
     </footer>
