--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
     </div>
     <footer>
       <div class="container">
-        <font color="white">2016-2017 Created by jashilko</font>
+        <font color="white">© 2016-2017 Created by jashilko</font>
         {% include yandex.html %}
       </div>
     </footer>
